# home-surveillance

./: .gitignore  README.md  pyproject.toml  setup.cfg
configs/: base.yaml  detection.yaml  face_detection.yaml  tracking.yaml
scripts/: diagnose_pipeline.py  run_detection.py  run_face_detection.py  run_tracking.py  verify_env.py
src/surveillance/core/: config.py  constants.py  exceptions.py  logger.py
src/surveillance/detection/: __init__.py  detector.py  schema.py
src/surveillance/face/: __init__.py  alignment.py  detector.py  quality.py  schema.py
src/surveillance/tracking/: __init__.py  schema.py  tracker.py
src/surveillance/tracking/boosttrack/: boost_track.py  kalman_filter.py  matching.py  track.py
src/surveillance/utils/: bbox.py  image.py  timer.py  visualization.py
src/surveillance/weights/: manager.py
tests/: conftest.py  test_config.py  test_detection.py  test_face_detection.py  test_tracking.py  test_utils_bbox.py
weights/: registry.yaml
weights/yolo11s_openvino_model/: metadata.yaml  yolo11s.xml
